// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render an header 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div>
      <h1
        class="mb-0 md:text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div>
      <h1
        class="mb-0 md:text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
      <div
        class="text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div>
      <h1
        class="mb-0 md:text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
      <div
        class="text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm bhctej"
          data-testid="header__extra"
          type="button"
        >
          Extra 1
        </button>
        <button
          class="sc-AxjAm bhctej"
          data-testid="header__extra"
          type="button"
        >
          Extra 2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
